--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,5 +19,6 @@ COPY --from=builder ./app/prod ./prod
 
 ENV NEW_RELIC_NO_CONFIG_FILE=true
 ENV NEW_RELIC_LOG=stdout
+ENV NEW_RELIC_APP_NAME=nadeshiko
 
 CMD [ "npm", "run", "start" ]
