--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "sharp": "^0.33.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "typescript": "^5.7.3",
     "uuid": "^10.0.0",
     "winston": "^3.15.0"
   },
