--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -51,7 +51,7 @@ services:
       '
     volumes:
       - elasticsearch_data:/usr/share/elasticsearch/data
-      - elasticsearch_config:/usr/share/elasticsearch/config
+      - ./elastic:/usr/share/elasticsearch/config
       - elasticsearch_plugins:/usr/share/elasticsearch/plugins
 
     networks:
